# synapse-city

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml
app/: main.py
app/api/: router.py
app/api/routes/: health.py  ops.py
app/config/: conf.py
app/domain/: ops.py
app/models/: ops.py  server.py  weather.py
app/services/: ops.py  sendit.py  weather.py
