[project]
name = "synapse-city"
version = "1.0.0-alpha.1"
description = "Agent that allows making decisions related to the Smart City project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.121.0",
    "crewai-tools>=0.45.0",
    "duckduckgo-search>=8.0.2",
    "fastapi[all]>=0.115.12",
    "langchain-google-genai>=2.1.4",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]
